<resources>
    <string name="app_name">SferaZone1</string>
    <string name="share">share</string>
    <string name="user_id">ID 123 456 789</string>
    <string name="profile_name">Viktoria Ruff</string>
    <string name="profile_points">4.7</string>
    <string name="choose">Choose</string>
    <string name="languages">Russian, English, German</string>
    <string name="location">New York city, USA</string>
    <string name="questionnaries">QUESTIONNARIES</string>
    <string name="people">PEOPLE</string>
    <string name="about_me">About me</string>
    <string name="about_me_text">Жизнь будет гораздо проще и приятнее для каждого человека, если мы будем</string>
    <string name="dream_and_get">Dream and get</string>
    <string name="bt_wishes_text">WISHES</string>
    <string name="moments">Moments</string>
    <string name="chronicles">Chronicles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscribe">Subscribe</string>
    <string name="unSubscribe">UnSubscribe</string>
    <string name="user">User</string>
    <string name="search">search</string>
    <string name="subscribers">SUBSCRIBERS</string>
    <string name="subscriptions">SUBSCRIPTIONS</string>
    <string name="mutually">MUTUALLY</string>
</resources>