<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/background"
            app:menu="@menu/menu_user_app_bar"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/user_id"
            app:titleTextAppearance="@style/TextIDStyle"
            app:titleTextColor="@color/main_color" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_points"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/profile_points"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/profile_name"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <ImageView
                android:id="@+id/ivLanguage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_world"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:text="@string/languages"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivLanguage"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/choose"
                android:textColor="@color/second_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="23dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLanguage" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="23dp"
                android:text="@string/location"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivLocation"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/choose"
                android:textColor="@color/second_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_images_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintTop_toBottomOf="@id/tvLocation"
                tools:listitem="@layout/item_user_images" />

            <Button
                android:id="@+id/bt_questionnaries"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:text="@string/questionnaries"
                app:layout_constraintEnd_toStartOf="@+id/bt_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_images_recycler" />

            <Button
                android:id="@+id/bt_people"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/people"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_questionnaries"
                app:layout_constraintTop_toBottomOf="@+id/user_images_recycler" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/about_me"
                android:orientation="horizontal"
                android:textColorHint="@color/main_color1"
                app:boxStrokeColor="@color/second_color"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:counterTextColor="@color/main_color"
                app:hintTextColor="@color/second_color"
                app:layout_constraintTop_toBottomOf="@+id/bt_questionnaries"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start"
                    android:maxLength="301"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/about_me_text"
                    android:textColor="@color/main_color"
                    android:textColorHint="@color/main_color"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:fontFamily="@font/inter_regular"
                android:text="@string/dream_and_get"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:theme="@style/MySwitch"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:useMaterialThemeColors="false"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/bt_Wishes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bt_wishes_text"
                app:layout_constraintTop_toBottomOf="@+id/switchCompat" />

            <TextView
                android:id="@+id/tv_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/moments"
                android:textColor="#9575CD"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/bt_Wishes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_moments_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tv_moments"
                tools:listitem="@layout/item_moments_image" />

            <TextView
                android:id="@+id/tv_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/chronicles"
                android:textColor="#9575CD"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/user_moments_recycler" />


            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/user_chronicles_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="11dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_chronicles"
                tools:listitem="@layout/item_chronicles_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>